appId: com.soen390.conunav
---
- launchApp
- tapOn: "SGW Campus"
- tapOn: { point: "50%,48%" }
- tapOn: { point: "50%,48%" }
- tapOn: "Indoor Maps"
- tapOn: "Floor 1"
- tapOn: "Floor 9"
- tapOn: "Search"
- tapOn: "CC-106"
- tapOn: "Search rooms..."
- inputText: "H9"
- tapOn: "H9-907"
- tapOn: "H9-907"
- tapOn:
    text: "M"
    index: 0
- tapOn: "Show Directions"
- assertVisible: "Walk straight to H9-907"
